--- a/etc/systemd/zynthian.service
+++ b/etc/systemd/zynthian.service
@@ -2,6 +2,8 @@
 Description=Zynthian User Interface
 After=jack2.service
 Requires=jack2.service
+After=xserver.service
+Requires=xserver.service
 
 [Service]
 Environment=PATH=/usr/local/bin:#ZYNTHIAN_SYS_DIR#/sbin:/bin:/usr/bin:/sbin:/usr/sbin
@@ -14,12 +16,12 @@ Environment=ZYNTHIAN_SYS_DIR=#ZYNTHIAN_SYS_DIR#
 Environment=ZYNTHIAN_CONFIG_DIR=#ZYNTHIAN_CONFIG_DIR#
 WorkingDirectory=#ZYNTHIAN_UI_DIR#
 ExecStart=#ZYNTHIAN_UI_DIR#/zynthian.sh
-TimeoutStopSec=20
+TimeoutStopSec=25
 #ExecStop=/usr/local/bin/send_osc 1370 /CUIA/EXIT_UI
 #ExecStop=/bin/sleep 10
 #ExecStop=/usr/bin/killall -SIGTERM zynthian_gui.py
 #ExecStop=/bin/sh -c "/usr/bin/tail --pid=$MAINPID -f /dev/null"
-Restart=always
+Restart=on-failure
 RestartSec=5
 
 [Install]
