--- a/etc/systemd/xserver.service
+++ b/etc/systemd/xserver.service
@@ -4,6 +4,7 @@
 Description=X server
 
 [Service]
+Environment=FRAMEBUFFER=#FRAMEBUFFER#
 ExecStart=/usr/bin/X :0 -nolisten tcp -dpms -s 0 -v -novtswitch vt7
 StandardOutput=syslog
 SuccessAction=xloadimage -display :0 -fullscreen -onroot #ZYNTHIAN_CONFIG_DIR#/img/fb_zynthian_message.png
